Release next version (#42)
* Fix docs

* Implement thumbnails

* Fix pic messages

* Implement blocking users

* Prep for release
